<resources>
    <string name="app_name">Tabata timer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SeqTitle">Title</string>
    <string name="add_sequence_name">Add sequence name</string>
    <string name="preparation">Preparation</string>
    <string name="preparation_editText">sec</string>
    <string name="repeatNum_editText">number of repetitions</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="cycles_work_and_rest">Cycles (work and rest)</string>
    <string name="sets_repeat_all">Sets (repeat all)</string>
    <string name="rest_between_sets">Rest between sets</string>
    <string name="calm">Calm</string>
    <string name="add_sequence">Add sequence</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirmColor">Ok</string>
    <string name="cancelColor">Cancel</string>
    <string name="color">Color</string>
    <string name="back">Back</string>
    <string name="tabata_timer">Tabata timer</string>
    <string name="open">Open</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="newSeq">New</string>

    <string name="unnamed">unnamed</string>
    <string name="chooseColor">Choose color</string>

    <string name="theme">Theme</string>
    <string name="night">Night</string>
    <string name="nightOn">Night theme is activated</string>
    <string name="nightOff">Day theme is activated</string>
    <string name="language">Language</string>
    <string name="text">Text</string>
    <string name="fontSize">Font size</string>
    <string name="deleteAll">Delete data</string>

</resources>