<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ScrollViewCount,UselessParent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TimerEditFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarEdit"
            style="@style/Toolbar"
            tools:ignore="MissingConstraints" >

            <Button
                android:id="@+id/btnBackFromUpdateSeq"
                style="@style/toolbarButtonStyle"
                android:layout_gravity="start|center_vertical"
                android:drawableStart="@android:drawable/ic_menu_revert"
                android:drawableLeft="@android:drawable/ic_menu_revert" />

            <Button
                android:id="@+id/btnSaveUpdatedSeq"
                style="@style/toolbarButtonStyle"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnChooseColor"
                style="@style/toolbarButtonStyle"
                android:text="@string/color"
                android:drawableStart="@drawable/wheel"
                android:drawableLeft="@drawable/wheel" />

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:text="@string/SeqTitle"
            style="@style/seqTextView"/>

        <EditText
            android:id="@+id/seqNameTextViewUpdate"
            style="@style/seqTextEditSec"
            android:hint="@string/add_sequence_name"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:text="@string/preparation"
            style="@style/seqTextView"/>

        <EditText
            android:id="@+id/preparationNumUpdate"
            style="@style/seqTextEditSec"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:text="@string/work"
            style="@style/seqTextView"/>

        <EditText
            android:id="@+id/workNumUpdate"
            style="@style/seqTextEditSec"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:text="@string/rest"
            style="@style/seqTextView"/>

        <EditText
            android:id="@+id/restNumUpdate"
            style="@style/seqTextEditSec"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:text="@string/cycles_work_and_rest"
            style="@style/seqTextView"/>

        <EditText
            android:id="@+id/cyclesNumUpdate"
            style="@style/seqTextEditRepeat"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:text="@string/sets_repeat_all"
            style="@style/seqTextView"/>

        <EditText
            android:id="@+id/setsNumUpdate"
            style="@style/seqTextEditRepeat"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:text="@string/rest_between_sets"
            style="@style/seqTextView"/>

        <EditText
            android:id="@+id/restBetweenSetsNumUpdate"
            style="@style/seqTextEditSec"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:text="@string/calm"
            style="@style/seqTextView"/>

        <EditText
            android:id="@+id/calmNumUpdate"
            style="@style/seqTextEditSec"
            android:autofillHints=""
            tools:ignore="LabelFor" />


    </LinearLayout>

</ScrollView>
